--- a/colossus/templates/base.html
+++ b/colossus/templates/base.html
@@ -1,7 +1,8 @@
-{% load static i18n %}<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  {% load static i18n %}
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
@@ -12,14 +13,14 @@
   <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'notifications/css/notifications.css' %}">
-  <title>{% block title %}Colossus{% endblock %}</title>
+  <title>{% block title %}Docup{% endblock %}</title>
   {% block stylesheet %}
   {% endblock %}
 </head>
 <body>
 {% block body %}
   <nav class="navbar navbar-expand-lg navbar-light py-3 mb-3 shadow-sm" style="background-color:#fff;">
-    <a class="navbar-brand" href="{% url 'dashboard' %}">Colossus</a>
+    <a class="navbar-brand" href="{% url 'dashboard' %}">DocUp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu"
             aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
