--- a/colossus/templates/base.html
+++ b/colossus/templates/base.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/css/tempusdominus-bootstrap-4.css">
   <!--<link rel="stylesheet" type="text/css" href="{% static 'vendor/tempusdominus/css/tempusdominus-bootstrap-4.min.css' %}">-->
   <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="{% static '../static/css/app.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'notifications/css/notifications.css' %}">
 
   <title>{% block title %}Docup{% endblock %}</title>
