--- a/colossus/templates/base.html
+++ b/colossus/templates/base.html
@@ -53,6 +53,10 @@
           {% trans 'Configure Emails' %}
         {% if menu == 'emails' %}<span class="sr-only">{% trans '(current)' %}</span>{% endif %}
         </a>
+        <a class="nav-item nav-link{% if menu == 'phonebook' %} active{% endif %}" href="/emails/phonebook">
+          {% trans 'Phone Book' %}
+        {% if menu == 'phonebook' %}<span class="sr-only">{% trans '(current)' %}</span>{% endif %}
+        </a>
       </div>
       <ul class="navbar-nav">
         <li class="nav-item">
