--- a/colossus/apps/emails/templates/emails/phonebook_setup.html
+++ b/colossus/apps/emails/templates/emails/phonebook_setup.html
@@ -20,9 +20,11 @@
       <p><span style="color: #1c7430">{{ no_data }}</span></p>
     {% endif %}
     <table style="border-style: inset;text-align: center;width:400px;border: 1px solid black;">
-      <th style="border: 1px solid black;">
+      {% if not fail %}
+        <th style="border: 1px solid black;">
         Emails
-      </th>
+        </th>
+      {% endif %}
       {%for detail in phonebook_details%}
       <tr style="border: 1px solid black;">
         <td style="border: 1px solid black;">
