--- a/colossus/apps/accounts/templates/registration/login.html
+++ b/colossus/apps/accounts/templates/registration/login.html
@@ -17,6 +17,7 @@
     </div>
     <div class="text-center">
       <a href="{% url 'password_reset' %}" class="btn btn-link">{% trans 'Forgot your password?' %}</a>
+      <a href="/accounts/register" class="btn btn-link">{% trans 'Register?' %}</a>
     </div>
   </div>
 {% endblock %}
