--- a/colossus/apps/accounts/templates/registration/registeration_form.html
+++ b/colossus/apps/accounts/templates/registration/registeration_form.html
@@ -9,10 +9,12 @@
   {% if fail %}
     <p><span style="color: crimson">{{fail}} </span></p>
   {% endif %}
-  <p class="lead">{% trans 'Create an admin account to manage Colossus:' %}</p>
+  <p class="lead">{% trans 'Create an admin account to manage DocsUp:' %}</p>
   <form method="POST">
     {% csrf_token %}
     {{ form|crispy }}
     <button type="submit" class="btn btn-success">{% trans 'Create admin account' %}</button>
+    <br/>
+    <a href="/accounts/login" class="btn btn-link">{% trans 'Login' %}</a>
   </form>
 {% endblock %}
