--- a/colossus/templates/base.html
+++ b/colossus/templates/base.html
@@ -24,7 +24,7 @@
 <body>
 {% block body %}
   <nav class="navbar navbar-expand-lg navbar-light py-3 mb-3 shadow-sm" style="background-color:#fff;">
-    <a class="navbar-brand" href="{% url 'dashboard' %}">DocUp</a>
+    <a class="navbar-brand" href="{% url 'dashboard' %}">DocsUp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu"
             aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
